# Personal-Data-Structures

./: BST.hpp  CMakeLists.txt  DoubleNode.hpp  LinkedList.cpp  LinkedList.hpp  Node.hpp  PrecondViolatedExcept.cpp  PrecondViolatedExcept.h  README.md  Stack.hpp  Vector.cpp  abstract_deque.hpp  complex.cpp  complex_test.cpp  deque.hpp  main.cpp  student_tests(BST).cpp  student_tests(Deque).cpp  student_tests.cpp
BST for Recipes/: BST.hpp  CMakeLists.txt  Ingredient.cpp  Ingredient.h  Node.hpp  Recipe.cpp  Recipe.h  student_tests.cpp
Polynomial Calculator/: CMakeLists.txt  LinkedList.cpp  LinkedList.hpp  ListInterface.hpp  Polynomial.cpp  Polynomial.hpp  Term.cpp  Term.hpp  pcalc.cpp  student_tests.cpp
Proj1/: CMakeLists.txt  New Real and Complex Axis.txt  Original Real and Complex Axis.txt  complex.hpp  fractal.cpp  mandelbrot.cpp  mandelbrot.hpp  student_tests.cpp
Proj2/: CMakeLists.txt  Sieve.cpp  Sieve.hpp  Vector.cpp  Vector.hpp  student_tests.cpp
Proj3/: CMakeLists.txt  Node.cpp  Stack.cpp  color2grayscale.cpp  fillregion.cpp  region_grower.cpp  region_grower.hpp  student_tests.cpp
Proj3/test/: CMakeLists.txt  test_cases
tests/: settings.txt
